# agent-pet-hub

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: bug-fix-report-v2.md  bug-fix-report.md  initialization-analysis.md  phase1-research.md  phase2-architecture.md  phase3-protocol.md  phase4-mvp.md  phase5-tasks.md  security-audit-report-v2.md  security-audit-report-v3.md  security-audit-report-v4.md  security-audit-report.md  security-review.md  skin-system-design.md
skills/pi/: pet-event-logger.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  pet-window.json
src-tauri/icons/: icon.icns
src-tauri/resources/skins/default/: README.md  index.json
src-tauri/resources/skins/default/css/: error.css  idle.css  success.css  thinking.css  waiting.css  working.css
src-tauri/src/: commands.rs  lib.rs  main.rs  skin.rs
src-tauri/src/adapter/: event_converter.rs  mod.rs  pi_adapter.rs  pi_watcher.rs  trait.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/event_bus/: bus.rs  mod.rs
src-tauri/src/ipc/: mod.rs  ws_server.rs
src-tauri/src/plugin/: manager.rs  mod.rs
src-tauri/src/state_machine/: machine.rs  mod.rs  transitions.rs
src-tauri/src/tts/: engine.rs  mod.rs
src-tauri/src/types/: events.rs  mod.rs  pet.rs
src-tauri/src/window/: mod.rs  pet_window.rs  tray.rs
src/assets/skins/shark/: skin.json
src/components/: PetPNG.tsx  PetSVG.tsx  PetSVGLegacy.tsx  PetStatus.tsx  SkinSelector.tsx
src/hooks/: useAgentState.ts  useSkinLoader.ts
src/services/: wsClient.ts
src/types/: events.ts  pet.ts  skin.ts
